--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"dependencies": {
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"uuid": "9.0.0"
+		"styled-components": "^5.3.9",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-react": "3.1.0",
